--- a/ChangeLog
+++ b/ChangeLog
@@ -6,11 +6,13 @@
 	Change include stringstream.h to include svg/stringstream.h.
 
 	* src/Makefile.am, src/Makefile_insert: Change libinkscape.a use
-	to eliminate triple compilation of these object files.
+	  to eliminate triple compilation of these object files.
 
 	* src/Makefile.am: Use `subdir-objects' option.
 
 	* src/Makefile.am: Add global INCLUDES setting.
+	* src/*/Makefile_insert: Get rid of now-redundant $(INKSCAPE_CFLAGS)
+	  from *_CPPFLAGS.
 
 2004-04-22  Ted Gould  <ted@gould.cx>
 
