--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2004-04-24  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
+	* src/dialogs/stroke-style.cpp: #include prefix.h.
+
 	* src/Makefile.am (EXTRA_DIST): Add */makefile.in.
 
 	* src/libnr/Makefile_insert (libnr_libnr_a_SOURCES):
