--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-04-25  Carl Hetherington <inkscape@carlh.net>
+
+	* src/verbs.cpp: SPSelection OO-ification.
+
 2004-04-24  MenTaLguY <mental@rydia.net>
 
 	* src/arc-context.cpp, src/dyna-draw-context.cpp, src/object-ui.cpp,
