--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-04-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
+
+	* configure.in: Replace use of old AM_PROG_LIBTOOL macro with
+	  AC_PROG_LIBTOOL.
+
 2004-04-26  Ted Gould  <ted@gould.cx>
 
 	* share/extensions/epsi_output.inkmod:
