--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 
 	* src/selection.cpp: migrate to new glib idle API
 
+	* src/extension/db.cpp: can't call ->deactivated() on a NULL pointer..
+
 2004-04-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>
 
 	* configure.in: Replace use of old AM_PROG_LIBTOOL macro with
